--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -131,15 +131,26 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 
 Torture-test the new upgrade logic...REMAINING TESTS NOT COMPLETED YET:
 
-1) App AND plugin developer-configged PER-SETTING resets [by version number]
-
-2) High security mode
+1) High security mode
 
 
 Add developer status alert that the prune_access_stats() patch is released, AND it's also now safe to MANUALLY import configs / charts (with import interfacing coming in the NEXT release).
 
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+
+DOUBLE-CHECK app / plugin version upgrading overhaul, including per-setting resets, upgrade / downgrade auto-update, and high security mode.
+
+
+See if we can use a more efficient coingecko marketcap data call, than what we use now. On a Raspberry Pi v4, we add at least 1.3 seconds to the UI runtime, IF marketcap asset max is set to the 1000 top coins. Maybe we can build a BATCHED single call, that includes mcap data (like we do for their 'simple price' API).
+
+
+Ideally, we want to skip including light charts in zip archiving, for two reasons:
+
+1) We already build light charts automatically from archive charts, if none exist, and our current logic MAY NOT take into account OLD light charts being imported WITH AN OLD "LAST PRICE" TIMESTAMP (but we should check the logic, and make sure it does support this).
+
+2) The backup zip archive will be significantly smaller in size, for large asset collections, and since we automatically build light charts if they don't exist, we have no real need to backup them up.
 
 
 Whenever we buildout the config restore feature, make sure when we import it we check for valid json (like we do when updating the cached config), and restore the "last known" working cached config we always save, if it fails the check (and is saved as the new "last known" working config if it passes the check).
