--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -7003,9 +7003,13 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Fixed throttled APIs (like AlphaVantage FREE tier) not allowing LIGHT CHART REBUILDS (which caused related price charts to not appear in the user interface, AFTER resetting light charts) Sorry!
 
+-BUG FIX: Fixes for time period (light) price charts reliability, where they would have gaps between data points, greater then the time intervals set for that particular time period chart
+
 -BUG FIX: Fixes for price charts importing reliability, where they would not properly rebuild the time period (light) charts
 
 -BUG FIX: Miscellaneous (minor)
+
+-We now SKIP including light charts in chart backup ZIP files, so the backup will be significantly smaller for large chart collections (we automatically rebuild light charts from archival charts if they don't exist, so we don't require backing them up)
 
 -Overhauled upgrade system, that now includes importing config backups (safely)
 
