--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -129,9 +129,7 @@ Any "new feature / architecture ideas" should AT THE EARLIEST be worked on AFTER
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
 
-Torture-test the new upgrade logic...REMAINING TESTS NOT COMPLETED YET:
-
-1) High security mode
+Torture-test the new upgrade logic...REMAINING TESTS NOT COMPLETED YET: High security mode
 
 
 Add developer status alert that the prune_access_stats() patch is released, AND it's also now safe to MANUALLY import configs / charts (with import interfacing coming in the NEXT release).
