--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -7013,6 +7013,8 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -Overhauled upgrade system, that now supports importing config backups (safely)
 
+-More reliable plugin validity checks
+
 -Minor user experience improvements
 
 -------------------------------------------------------------------
