--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -7021,6 +7021,15 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+6.01.07
+
+-BUG FIX: TBD
+
+-------------------------------------------------------------------
+
+
+
 
 
 
