--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -7026,11 +7026,13 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: TBD
 
--Better Server Edition auto-installer UX
+-Loosened username restrictions for the "Admin Area => Security => Interface Login" setting (so only validity check is a 4 character MINIMUM)
 
 -Better AlphaVantage "Stock Overview" API integration / UX
 
--Loosened username restrictions for the "Admin Area => Security => Interface Login" setting (so only validity check is a 4 character MINIMUM)
+-Server Edition auto-installer refactoring
+
+-Better Server Edition auto-installer UX
 
 -------------------------------------------------------------------
 
